manifests/apps/job-manager/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jobmanager
spec:
  gateways:
    - os4ml/os4ml-gateway
    - kubeflow/kubeflow-gateway
  hosts:
    - '*'
  http:
    - name: "jobmanager-route"
      match:
        - uri:
            regex: \/apis\/.*\/jobmanager.*
      route:
        - destination:
            host: jobmanager.os4ml.svc.cluster.local
            port:
              number: 8000
